tests/errors/implicit_conversion.orus
fn main() {
    let a: i32 = 5
    let b: f64 = 3.0
    let c = a + b
    print("{}", c)
}
